--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           # outputs: dist/snake.svg?color_snake=#f34b7d
-          outputs: dist/snake.svg?color_snake=#F34B7D&color_dots=#171a22,#0F4428,#006D32,#27A640,#39D353
+          outputs: dist/snake.svg?color_snake=#F34B7D&color_dots=#3339d353,#6639d353,#9939d353,#cc39d353,#39D353
 
 
       - name: push snake.svg to the output branch
