--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,8 +19,7 @@ jobs:
         uses: Platane/snk/svg-only@v2
         with:
           github_user_name: ${{ github.repository_owner }}
-          # outputs: dist/snake.svg?color_snake=#f34b7d
-          outputs: dist/snake.svg?color_snake=#F34B7D
+          outputs: dist/snake.svg?palette=github
 
 
       - name: push snake.svg to the output branch
