--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,7 +19,9 @@ jobs:
         uses: Platane/snk/svg-only@v2
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github&snake_color=#F34B7D
+          outputs: |
+            dist/snake-light.svg?palette=github-light
+            dist/snake-dark.svg?palette=github-dark
 
 
       - name: push snake.svg to the output branch
